[package]
name = "netlink-packet-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
anyhow = "1.0.31"
#bytes = "1.0"
byteorder = "1.3.2"
#log = "0.4.8"
netlink-packet-core = {git = "ssh://git@github.com/mhupfer/netlink.git", branch = "netlink-packet-connector"}
#netlink-packet-core = { path = "../netlink-packet-core"}
netlink-packet-utils = "0.5"
serde = { version = "1.0", features = ["derive"] }
